--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 
 <html>
+
    <head>
       <title>File Metadata</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
+      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
       <link href="/public/style.css" rel="stylesheet" type="text/css">
    </head>
 
    <body>
+
       <div class="container">
         <h2>API Project: File Metadata Microservice</h2>
-
         <h3>Usage:</h3>
         <p>
           Please Upload a File ...
@@ -27,8 +28,10 @@
       <div class="footer">
         <p>
           by 
-          <a href="http://www.freecodecamp.com">freeCodeCamp</a>
+          <a href="https://www.freecodecamp.org/">freeCodeCamp</a>
         </p>
       </div>
    </body>
+
+
 </html>
